# QMETIS

./: .gitignore  AGENTS.md  BUILD-Windows.txt  CLAUDE.md  CMakeLists.txt  Changelog  Makefile  PERF-REVIEW.md  README.md  install_metis_python_linux.sh  vsgen.bat
.github/scripts/: build-unix.sh  build-windows.ps1  verify_library.py
.github/workflows/: native-libraries.yml
conf/: gkbuild.cmake
graphs/: README  metis.mesh  test.mgraph
include/: CMakeLists.txt  metis.h
libmetis/: CMakeLists.txt  auxapi.c  balance.c  checkgraph.c  coarsen.c  compress.c  contig.c  debug.c  defs.h  fm.c  fortran.c  graph.c  initpart.c  kmetis.c  kwayfm.c  kwayrefine.c  macros.h  meshpart.c  metislib.h  minconn.c  mincover.c  mmd.c  ometis.c  options.c  parmetis.c  pmetis.c  proto.h  refine.c  rename.h  sfm.c  srefine.c  stat.c  struct.h  wspace.c
perf/: .gitignore  RESULTS.md  compare.sh  harness.sh  mem.sh  run_opt.sh
programs/: CMakeLists.txt  cmdline_gpmetis.c  cmdline_m2gmetis.c  cmdline_mpmetis.c  cmdline_ndmetis.c  cmpfillin.c  defs.h  gpmetis.c  graphchk.c  io.c  m2gmetis.c  metisbin.h  mpmetis.c  ndmetis.c  proto.h  smbfactor.c  stat.c  struct.h
test/: Makefile  mtest.c  proto.h
utils/: int2idxtype.sh  listunescapedsymbols.csh  mkdist.sh  s+r.sh
